# brain-monitor-win

./: .gitignore  BrainMonitor.sln  CONVERSION_SUMMARY.md  README.md  介绍文档.html
BrainMonitor/: App.xaml  App.xaml.cs  BrainMonitor.csproj  BrainMonitorSDK.def  BrainMonitorWrapper.cpp  BrainMonitorWrapper.h  CMakeLists.txt  appsettings.json  switch-to-default.bat  switch-to-dev.bat  switch-to-prod.bat
BrainMonitor/Configuration/: AppConfig.cs  ConfigHelper.cs  ConfigTest.cs  GripStrengthTest.cs  README.md
BrainMonitor/Converters/: DateTimeConverter.cs
BrainMonitor/Models/: TestDataModels.cs
BrainMonitor/SDK/: BrainMonitorSDK.cs
BrainMonitor/Services/: BrainwaveDataProcessor.cs  EDFWriter.cs  GripStrengthService.cs  HttpService.cs  TestHistoryService.cs  TesterService.cs
BrainMonitor/Views/: InstitutionLoginPage.xaml  InstitutionLoginPage.xaml.cs  InstitutionLoginWindow.xaml  InstitutionLoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MedicalStaffPage.xaml  MedicalStaffPage.xaml.cs  MedicalStaffWindow.xaml  MedicalStaffWindow.xaml.cs  ModernMessageBoxWindow.xaml  ModernMessageBoxWindow.xaml.cs  ReportPage.xaml  ReportPage.xaml.cs  ReportWindow.xaml  ReportWindow.xaml.cs  StaffLoginPage.xaml  StaffLoginPage.xaml.cs  StaffLoginWindow.xaml  StaffLoginWindow.xaml.cs  TestHistoryPage.xaml  TestHistoryPage.xaml.cs  TestHistoryWindow.xaml  TestHistoryWindow.xaml.cs  TestPage.xaml  TestPage.xaml.cs  TestProcessPage.xaml  TestProcessPage.xaml.cs  TestWindow.xaml  TestWindow.xaml.cs  TesterInfoPage.xaml  TesterInfoPage.xaml.cs  TesterInfoWindow.xaml  TesterInfoWindow.xaml.cs
BrainMonitor/demo/: brnpro_sdk.h  jfsdk_demo2.cpp
BrainMonitor/lib/: ble_device.h  brnpro_if.h  jfsdklib.lib
server/: README.md  SETUP.md  ecosystem.config.js  generate-password.js  package-lock.json  package.json  quick-start.bat  quick-start.sh  server.js  start.bat  start.sh  test-api.http
server/config/: database.js  jwt.js
server/database/: schema.sql
server/middleware/: auth.js
server/routes/: auth.js  brainwave-data.js  test-records.js  test-results.js  testers.js
server/scripts/: init-db.js
server/services/: gripStrengthService.js
